DT-813 fixes desktop overflow bug

--- a/src/client/styles/disaster-alerts.scss
+++ b/src/client/styles/disaster-alerts.scss
@@ -9,7 +9,7 @@
     //display:none;
   }
   .disasterLoanParature {
-    height:3.89vw;
+    //height:3.89vw;
     width:100vw;
     background-color: #FFC63D;
     color:#333333;
